client/src/app/features/users/components/user-detail/user-detail.component.scss
@use 'abstracts/variables' as vars;
@use 'abstracts/mixins' as mix;
@use 'abstracts/functions' as func;

:host {
  .user-detail-container {
    @include mix.card-container;
  }

  .loading-container {
    @include mix.loading-container;
  }

  .error-container {
    .error-icon {
      color: var(--color-error);
    }

    @include mix.empty-state;
  }

  .user-header {
    display: flex;
    gap: vars.$spacing-md;
    align-items: center;
  }

  .avatar {
    display: flex;
    align-items: center;
    justify-content: center;
    width: func.rem(80);
    height: func.rem(80);
    background-color: var(--color-border);
    border-radius: vars.$border-radius-circle;

    mat-icon {
      width: func.rem(48);
      height: func.rem(48);
      font-size: func.rem(48);
    }
  }

  .detail-item {
    @include mix.detail-item;
  }
}

